--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg  container navbar-menu">
+<nav class="navbar navbar-expand-lg bg-white  navbar-menu sticky-top">
+<div class="container">
 
   <a class="navbar-brand navbar-menu__brand-text" href="#"><img src="../../../assets/images/logo.png" alt="Logo" width="40"> JOOMHOST</a>
 
@@ -35,4 +36,5 @@
     </ul>
   </div>
 
+</div>
 </nav>
