--- a/src/app/header/top-bar/top-bar.component.scss
+++ b/src/app/header/top-bar/top-bar.component.scss
@@ -19,6 +19,7 @@ $lato: 'Lato', sans-serif;
     list-style: none;
     width: 100%;
     padding: 10px;
+    margin-bottom: 0;
   }
   .top-bar__info-item {
     float: left;
