Se agregaron fuentes e iconos

--- a/src/app/header/top-bar/top-bar.component.html
+++ b/src/app/header/top-bar/top-bar.component.html
@@ -2,8 +2,12 @@
   <div class="container">
     <ul class="top-bar__info-items clearfix">
       <li class="top-bar__info-item"><a href="#" class="top-bar__info-item-link">Have any question?</a></li>
-      <li class="top-bar__info-item"><a href="#" class="top-bar__info-item-link">infinity@gmail.com</a></li>
-      <li class="top-bar__info-item"><a href="#" class="top-bar__info-item-link">+080 0444 333 444</a></li>
+      <li class="top-bar__info-item"><a href="#" class="top-bar__info-item-link">
+        <i class="fa fa-envelope"></i> infinity@gmail.com</a>
+      </li>
+      <li class="top-bar__info-item"><a href="#" class="top-bar__info-item-link">
+        <i class="fa fa-phone"></i> +080 0444 333 444</a>
+      </li>
       <li class="top-bar__info-item--tool"><a href="#" class="top-bar__info-item-link">Wishlist</a></li>
       <li class="top-bar__info-item--tool"><a href="#" class="top-bar__info-item-link">My Account</a></li>
       <li class="top-bar__info-item--tool"><a href="#" class="top-bar__info-item-link"><img class="top-bar__info-item-icon" src="../../../assets/images/icon-usa.png" alt="USA icon"> English</a></li>
