--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -12,13 +12,17 @@
           </span>
 
             <ul class="slider__item-list">
-              <li>FREE Domain</li>
-              <li>FREE Site Builders</li>
-              <li>1-Click WordPress Install</li>
-              <li>24/7 Support</li>
+              <li><i class="fa fa-check-square slider__item-list-icon"></i> FREE Domain</li>
+              <li><i class="fa fa-check-square slider__item-list-icon"></i> FREE Site Builders</li>
+              <li>
+                <i class="fa fa-check-square slider__item-list-icon"></i>
+                1-Click <i class="fab fa-wordpress-simple slider__item-list-icon"></i>
+                WordPress Install
+              </li>
+              <li><i class="fa fa-check-square slider__item-list-icon"></i> 24/7 Support</li>
             </ul>
 
-            <button class="btn btn-outline-light">GET STARTED NOW!</button>
+            <button class="btn btn-outline-light slider__item-btn">GET STARTED NOW!</button>
             <br>
             <span class="slider__item-simple-text">
             *Special intro offer and 30-day money-back guarantee
