--- a/src/app/header/menu/menu.component.scss
+++ b/src/app/header/menu/menu.component.scss
@@ -1,7 +1,5 @@
-// Fonts variables
-$roboto: 'Roboto', serif;
-$openSans: 'Open Sans', serif;
-$fontColor: #2f3f54;
+@import "src/styles";
+
 .navbar-menu {
   text-transform: uppercase;
 }
