--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Lato&display=swap);
 
+// Fonts variables
+$lato: 'Lato', sans-serif;
+$roboto: 'Roboto', serif;
+$openSans: 'Open Sans', serif;
+$fontColor: #2f3f54;
