--- a/src/app/slider/slider.component.scss
+++ b/src/app/slider/slider.component.scss
@@ -1,7 +1,5 @@
-// Fonts variables
-$lato: 'Lato', sans-serif;
-$roboto: 'Roboto', serif;
-$fontColor: #2f3f54;
+@import "src/styles";
+
 .slider__item-content {
   padding-top: 5vh;
   background-image: url("src/assets/images/slider/bg.jpg");
