Customer content completo

--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -32,7 +32,10 @@
             <img class="slider__item-img--first" src="../../assets/images/slider/circle-price.png" alt="">
           </div>
         </div>
+
       </div>
     </div>
   </ng-template>
 </ngb-carousel>
+
+<app-customer-counter></app-customer-counter>
