--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,5 @@ $lato: 'Lato', sans-serif;
 $roboto: 'Roboto', serif;
 $openSans: 'Open Sans', serif;
 $fontColor: #2f3f54;
+
+$boxShadow: 0px 0px 26px 0px rgba(0,0,0,0.18);
