fix estilos iconos

--- a/src/app/content/features/features.component.html
+++ b/src/app/content/features/features.component.html
@@ -5,13 +5,13 @@
         <div class="row h-25">
 
         </div>
-        <div class="row h-25 p-3 pt-5">
+        <div class="row h-25 p-3 ">
           <img src="../../../assets/images/icon-content-1.png" height="33" alt="">
         </div>
-        <div class="row h-25 p-3 pt-5">
+        <div class="row h-25 p-3 ">
           <img src="../../../assets/images/icon-content-2.png" height="33"  alt="">
         </div>
-        <div class="row h-25 p-3 pt-5">
+        <div class="row h-25 p-3 ">
           <img src="../../../assets/images/icon-content-3.png" height="33"  alt="">
         </div>
       </div>
@@ -43,11 +43,19 @@
       </div>
     </div>
 
-    <div class="col-12 col-md-6 features__info-box-right">
+    <div class="col-12 col-md-6 features__info-box-right p-5">
       <h1 class="features__text-h1">
-        Lots of hosting services.
+        <span class="features__text-span--blue">Lots of hosting</span> services.
+        <br>
         Why you should choose us?
       </h1>
+      <br>
+      <p class="features__text-paragraph">
+        You can take a look at the back-end admin panel interface from this YouTube Video Tutorial:
+       <span class="features__text-span--blue">youtu.be/Bs9Irmrt220.</span>  In this video,
+        you will get a hint about how easy to customize everything of your pages using our Shortcodes,
+        and the Drag and Drop functionality.
+      </p>
     </div>
   </div>
 </div>
