--- a/src/app/customer-counter/customer-counter.component.scss
+++ b/src/app/customer-counter/customer-counter.component.scss
@@ -7,7 +7,7 @@
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  box-shadow: $boxShadow;
+  box-shadow: $boxShadow-35;
 }
 
 .main-box-counter__container {
