--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,4 @@ $openSans: 'Open Sans', serif;
 $fontColor: #2f3f54;
 
 $boxShadow: 0px 0px 26px 0px rgba(0,0,0,0.10);
+$boxShadow-35: 0px 0px 26px 0px rgba(0,0,0,0.35);
