Se agregaron info y estilos

--- a/src/app/content/features/features.component.scss
+++ b/src/app/content/features/features.component.scss
@@ -2,6 +2,7 @@
 
 .features {
   box-shadow: $boxShadow;
+  margin-bottom: 40px;
 }
 
 // Left box styles
@@ -63,9 +64,9 @@
   .features__list-box-left-icons {
     padding-top: 80px;
   }
-
   .features {
     margin-top: 200px;
+    margin-bottom: 80px;
   }
 
 }
