--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,4 +1,5 @@
 <app-features></app-features>
 <app-tab></app-tab>
 <app-pricing></app-pricing>
+<app-testimonial></app-testimonial>
 <app-partner></app-partner>
