--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,80 @@
 <div class="footer">
 
+  <div class="footer__links">
+    <div class="container">
+      <div class="row footer__links-row">
+        <div class="col-12 col-md-3 footer__links-col1 ">
+          <div class="row px-5">
+            <img class="mb-4" src="../../assets/images/JoomHost.png" alt="">
+            <p>
+              Hosting Website Builder is a big library of pre-designed web elements which help you create website
+              in few minutes.
+            </p>
+          </div>
+          <div class="row px-5">
+            <p>
+              Sign up for our mailing list to get latest updates and offers.
+            </p>
+
+            <div class="input-group footer__input-email">
+              <input type="text" class="form-control" placeholder="Email address">
+              <div class="input-group-append ">
+                <button class="btn btn-primary">
+                  <i class="fa fa-check"></i>
+                </button>
+              </div>
+            </div>
+            <br>
+            <p>We respect your privacy</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 px-5">
+          <h3>Knowledge Base</h3>
+          <ul>
+            <li>Tutorials</li>
+            <li>Get Paid to Write</li>
+            <li>Questions</li>
+            <li>Meetups</li>
+            <li>Referral Program</li>
+            <li>Shop</li>
+            <li>Droplets for Demos</li>
+          </ul>
+        </div>
+        <div class="col-12 col-md-3 px-5">
+          <h3>Company</h3>
+          <ul>
+            <li>Hosting.com Blog</li>
+            <li>About Us</li>
+            <li>Contact Us</li>
+            <li>Meetups</li>
+            <li>Terms & Conditions</li>
+            <li>Affiliate Terms & Conditions</li>
+            <li>Privacy Policy</li>
+          </ul>
+        </div>
+        <div class="col-12 col-md-3 px-5 footer__links-col4">
+          <h3>Quick Contact</h3>
+          <form action="#">
+            <form>
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Name">
+              </div>
+              <div class="form-group">
+                <input type="email" class="form-control" placeholder="Email Address">
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Subject">
+              </div>
+              <div class="form-group">
+                <textarea class="form-control" placeholder="Message" rows="3"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">SEND</button>
+            </form>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- Credits Bar-->
   <div class="footer__credits-bar">
     <div class="container">
