--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,25 +31,25 @@
         <div class="col-12 col-md-3 px-5">
           <h3>Knowledge Base</h3>
           <ul>
-            <li>Tutorials</li>
-            <li>Get Paid to Write</li>
-            <li>Questions</li>
-            <li>Meetups</li>
-            <li>Referral Program</li>
-            <li>Shop</li>
-            <li>Droplets for Demos</li>
+            <li><a href="">Tutorials</a></li>
+            <li><a href="">Get Paid to Write</a></li>
+            <li><a href="">Questions</a></li>
+            <li><a href="">Meetups</a></li>
+            <li><a href="">Referral Program</a></li>
+            <li><a href="">Shop</a></li>
+            <li><a href="">Droplets for Demos</a></li>
           </ul>
         </div>
         <div class="col-12 col-md-3 px-5">
           <h3>Company</h3>
           <ul>
-            <li>Hosting.com Blog</li>
-            <li>About Us</li>
-            <li>Contact Us</li>
-            <li>Meetups</li>
-            <li>Terms & Conditions</li>
-            <li>Affiliate Terms & Conditions</li>
-            <li>Privacy Policy</li>
+            <li><a href="">Hosting.com Blog</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Meetups</a></li>
+            <li><a href="">Terms & Conditions</a></li>
+            <li><a href="">Affiliate Terms & Conditions</a></li>
+            <li><a href="">Privacy Policy</a></li>
           </ul>
         </div>
         <div class="col-12 col-md-3 px-5 footer__links-col4">
