--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -100,6 +100,9 @@
           padding: 0;
           li {
             margin-top: 10px;
+            a {
+              color: inherit;
+            }
           }
         }
       }
