--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-white  navbar-menu sticky-top">
 <div class="container">
 
-  <a class="navbar-brand navbar-menu__brand-text" href="#"><img src="../../../assets/images/logo.png" alt="Logo" width="40"> JOOMHOST</a>
+  <a class="navbar-brand navbar-menu__brand-text" href="#"><img src="../../../assets/images/logo.png" class="zindex-dropdown" alt="Logo" width="40"> JOOMHOST</a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,9 +23,93 @@
       </li>
       <li class="nav-item navbar-menu__item">
         <a class="nav-link navbar-menu__item-link" href="#">Hosting</a>
+        <div class="w-100 navbar-menu__item-sub-menu">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-3">
+                <ul>
+                  <li>Sub-Menu</li>
+                  <li><a href="#">Item 1</a></li>
+                  <li><a href="#">Item 2</a></li>
+                  <li><a href="#">Item 3</a></li>
+                  <li><a href="#">Item 4</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <ul>
+                  <li>Sub-Menu</li>
+                  <li><a href="#">Item 1</a></li>
+                  <li><a href="#">Item 2</a></li>
+                  <li><a href="#">Item 3</a></li>
+                  <li><a href="#">Item 4</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <ul>
+                  <li>Sub-Menu</li>
+                  <li><a href="#">Item 1</a></li>
+                  <li><a href="#">Item 2</a></li>
+                  <li><a href="#">Item 3</a></li>
+                  <li><a href="#">Item 4</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <ul>
+                  <li>Sub-Menu</li>
+                  <li><a href="#">Item 1</a></li>
+                  <li><a href="#">Item 2</a></li>
+                  <li><a href="#">Item 3</a></li>
+                  <li><a href="#">Item 4</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </li>
       <li class="nav-item navbar-menu__item">
         <a class="nav-link navbar-menu__item-link" href="#">Pages</a>
+        <div class="w-100 navbar-menu__item-sub-menu">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-3">
+                <ul>
+                  <li>Sub-Menu</li>
+                  <li><a href="#">Item 1</a></li>
+                  <li><a href="#">Item 2</a></li>
+                  <li><a href="#">Item 3</a></li>
+                  <li><a href="#">Item 4</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <ul>
+                  <li>Sub-Menu</li>
+                  <li><a href="#">Item 1</a></li>
+                  <li><a href="#">Item 2</a></li>
+                  <li><a href="#">Item 3</a></li>
+                  <li><a href="#">Item 4</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <ul>
+                  <li>Sub-Menu</li>
+                  <li><a href="#">Item 1</a></li>
+                  <li><a href="#">Item 2</a></li>
+                  <li><a href="#">Item 3</a></li>
+                  <li><a href="#">Item 4</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <ul>
+                  <li>Sub-Menu</li>
+                  <li><a href="#">Item 1</a></li>
+                  <li><a href="#">Item 2</a></li>
+                  <li><a href="#">Item 3</a></li>
+                  <li><a href="#">Item 4</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </li>
       <li class="nav-item navbar-menu__item">
         <a class="nav-link navbar-menu__item-link" href="#">Blog</a>
